# zcash-swift-wallet-sdk

./: .gitignore  .rustc_info.json  .swiftlint.yml  .swiftlint_tests.yml  .travis.yml  CHANGELOG.md  CODE_REVIEW_GUIDELINES.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.orig  Cartfile  Cartfile.resolved  CompactBlockReorgTests.swift  LICENSE  MIGRATING.md  NotesRepositoryTests.swift  Package.resolved  Package.swift  README.md  ReOrgTests.swift  ZcashLightClientKit-Testnet.podspec  ZcashLightClientKit.modulemap  ZcashLightClientKit.podspec  ZcashTestnetLightClientKit.podspec  ]  build_librustzcash.sh  build_librustzcash_mainnet.sh  build_librustzcash_testnet.sh  changelog.md  dummy_file.txt  prepare.rb  prepare.sh  responsible_disclosure.md  support
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  feature-request.md  feature_request.md  ux-report.md
.github/workflows/: code_ql.yml  swift.yml  swiftlint.yml
Constants/: WalletBirthday+testnet.swift  ZcashSDK.swift
DerivationToolTests/: DerivatioToolTestnetTests.swift  DerivationToolMainnetTests.swift  DerivationToolTests.swift
Entity/: TransactionEntity.swift
Example/ZcashLightClient-Carthage/: Cartfile  Cartfile.resolved
Example/ZcashLightClientSample/: Podfile  README.md  run_swiftlint.sh
Playgrounds/Transactions.playground/: Contents.swift
Plugins/RustBuildPlugin/: RustBuildPlugin.swift
Scripts/: build_librustzcash.sh  build_librustzcash_xcode.sh  generate_test_constants.sh  generate_zcashsdk_constants.sh  prepare_zcash_sdk.sh  script_commons.sh
Scripts/travis/: ZcashLightClientSample_setup.sh  rust_setup.sh
Sources/Forklift/: Forklift.swift
Sources/ZcashLightClientKit/: ClosureSynchronizer.swift  CombineSynchronizer.swift  Initializer.swift  Synchronizer.swift  SynchronizerNotAsync.swift
Tests/AliasDarksideTests/: SDKSynchronizerAliasDarksideTests.swift
Tests/DarksideTests/: AdvancedReOrgTests.swift  BalanceTests.swift  BlockDownloaderTests.swift  DarksideSanityCheckTests.swift  InternalStateConsistencyTests.swift  NetworkUpgradeTests.swift  PaymentURIFulfillmentTests.swift  PendingTransactionUpdatesTest.swift  ReOrgTests.swift  RewindRescanTests.swift  ShieldFundsTests.swift  SwitchServerTests.swift  SychronizerDarksideTests.swift  SynchronizerDarksideTests.swift  SynchronizerTests.swift  TransactionEnhancementTests.swift  Z2TReceiveTests.swift  ZcashLightClientKitTests.swift
Tests/NetworkTests/: BlockScanOperationTests.swift  BlockScanTests.swift  BlockStreamingTest.swift  CompactBlockProcessorTests.swift  CompactBlockReorgTests.swift  DownloadOperationTests.swift  DownloadTests.swift  LightWalletServiceTests.swift  TorClientTests.swift  ZcashRustBackendTests.swift
Tests/OfflineTests/: BirthdayTests.swift  BlockBatchValidationTests.swift  CheckpointSourceTests.swift  ClosureSynchronizerOfflineTests.swift  CombineSynchronizerOfflineTests.swift  CompactBlockProcessorBatchTests.swift  CompactBlockProcessorOfflineTests.swift  CompactBlockRepositoryTests.swift  CompactBlockStorageTests.swift  ErrorLocalizationTests.swift  FsBlockStorageTests.swift  InitializerOfflineTests.swift  InternalSyncProgressTests.swift  MemoTests.swift  NotesRepositoryTests.swift  NullBytesTests.swift  PagedTransactionRepositoryTests.swift  PendingTransactionRepositoryTests.swift  RawTransactionTests.swift  RecipientTests.swift  SynchronizerOfflineTests.swift  TransactionRepositoryTests.swift  TxIdTests.swift  UndescribableTests.swift  UnifiedTypecodesTests.swift  WalletTests.swift  ZatoshiTests.swift  ZcashRustBackendTests.swift  ZcashTransactionStateTests.swift  Zip302MemoTests.swift  Zip325Tests.swift
Tests/PerformanceTests/: SDKMetricsTests.swift  SynchronizerTests.swift
Tests/TestUtils/: ActionContext+tests.swift  AlternativeSynchronizerAPITestsData.swift  (+24 more)
Tools/: Zcash-SyncTime-Profiler.tracetemplate
Transaction/: TransactionEncoder.swift  WalletTransactionEncoder.swift
ZcashLightClientKit/: Constants.swift  Initializer.swift  SendViewController.swift  Synchronizer.swift  Wallet.swift  ZcashLightClientKit.h  ZcashRustBackend.swift
ZcashLightClientKit.xcodeproj/: project.pbxproj
ZcashLightClientKitTests/: AdvancedReOrgTests.swift  BalanceTests.swift  BlockBatchValidationTests.swift  BlockDownloaderTests.swift  BlockScanOperationTests.swift  BlockStreamingTest.swift  CompactBlockProcessorTests.swift  CompactBlockReorgTests.swift  CompactBlockStorageTests.swift  Constants.stencil  DarksideSanityCheckTests.swift  DerivationToolTests.swift  DownloadOperationTests.swift  LightWalletServiceTests.swift  MemoTests.swift  NetworkUpgradeTests.swift  NotesRepositoryTests.swift  NullBytesTests.swift  OutboundTransactionManagerTests.swift  PagedTransactionRepositoryTests.swift  PendingTransactionRepositoryTests.swift  PendingTransactionUpdatesTest.swift  RawTransactionTests.swift  ReOrgTests.swift  RewindRescanTests.swift  Stubs.swift  SychronizerDarksideTests.swift  TestCoordinator.swift  TransactionEnhancementTests.swift  TransactionRepositoryTests.swift  TxIdTests.swift  WalletTests.swift  WalletTransactionEncoderTests.swift  Z2TReceiveTests.swift  ZcashLightClientKitTests.swift  ZcashRustBackendTests.swift
docs/: Architecture.md  README.md  ThreatModel.md  cbp_state_machine.puml  ci.md  development_process.md
filelists/: input.xcfilelist  output.xcfilelist
rust/: build.rs
(+1752 files in other folders)
