[package]
name = "libzcashlc"
version = "0.0.8"
authors = ["Jack Grigg <jack@z.cash>",
            "Francisco Gindre <francisco@z.cash>",
]
edition = "2018"
build = "rust/build.rs"

[dependencies]
failure = "0.1"
ffi_helpers = "0.2"
hex = "0.4"
zcash_client_backend = "0.5"
zcash_client_sqlite = "0.3.0"
zcash_primitives = "0.5"
zcash_note_encryption =  "0.0.0"

#### Temporary additions: ####################################
bitvec = "0.22"
base58 = "0.1.0"
sha2 = "0.9"
bs58 = { version = "0.3", features = ["check"] }
hdwallet = "0.3.0"
ripemd160 = "0.9"
time = "0.2"
funty = "=1.2.0"
##############################################################

[dependencies.zcash_proofs]
version = "0.5"
default-features = false
features = ["local-prover"]

[build-dependencies]
cbindgen = "0.14"

[lib]
name = "zcashlc"
path = "rust/src/lib.rs"
crate-type = ["staticlib"]

[profile.release]
lto = true

[patch.crates-io]
zcash_client_backend = {git = "https://github.com/nuttycom/librustzcash", rev = "da3c84ff31beec2c114729044d05bec3211a03d3" }
zcash_client_sqlite = {git = "https://github.com/nuttycom/librustzcash", rev = "da3c84ff31beec2c114729044d05bec3211a03d3" }
zcash_primitives = {git = "https://github.com/nuttycom/librustzcash", rev = "da3c84ff31beec2c114729044d05bec3211a03d3" }
zcash_proofs = {git = "https://github.com/nuttycom/librustzcash", rev = "da3c84ff31beec2c114729044d05bec3211a03d3" }
zcash_note_encryption = { git = "https://github.com/zcash/librustzcash.git", rev = "13b023387bafdc7b5712c933dc0e16ee94b96a6a" }
# In development.
orchard = { git = "https://github.com/zcash/orchard.git", rev = "2c8241f25b943aa05203eacf9905db117c69bd29" }
incrementalmerkletree = { git = "https://github.com/zcash/incrementalmerkletree.git", rev = "b7bd6246122a6e9ace8edb51553fbf5228906cbb" }
hdwallet = { git = "https://github.com/nuttycom/hdwallet", rev = "576683b9f2865f1118c309017ff36e01f84420c9" }

[features]
mainnet = ["zcash_client_sqlite/mainnet"]
testnet = []
