[package]
name = "libzcashlc"
version = "0.0.8"
authors = ["Jack Grigg <jack@z.cash>",
            "Francisco Gindre <francisco@z.cash>",
]
edition = "2018"
build = "rust/build.rs"

[dependencies]
failure = "0.1"
ffi_helpers = "0.2"
hex = "0.4"
zcash_client_backend = { version = "0.5", features = ["transparent-inputs"] }
zcash_client_sqlite = { version = "0.3", features = ["transparent-inputs"] }
zcash_primitives = "0.5"
zcash_proofs = "0.5"

#### Temporary additions: ####################################
#bitvec = "0.22"
base58 = "0.1.0"
#sha2 = "0.9"
#bs58 = { version = "0.3", features = ["check"] }
hdwallet = "0.3.0"
#ripemd160 = "0.9"
secp256k1 = "0.20"
time = "0.2"
num-bigint = "0.3.3"
##############################################################

#[dependencies.zcash_proofs]
#version = "0.5"
#default-features = false
#features = ["local-prover"]

[build-dependencies]
cbindgen = "0.14"

[lib]
name = "zcashlc"
path = "rust/src/lib.rs"
crate-type = ["staticlib"]

[profile.release]
lto = true

[patch.crates-io]
zcash_client_backend = {git = "https://github.com/nuttycom/librustzcash", rev = "15eb5aab503190d3dae4cc62c76cbdc5e8699ab1"}
zcash_client_sqlite = {git = "https://github.com/nuttycom/librustzcash", rev = "15eb5aab503190d3dae4cc62c76cbdc5e8699ab1"}
zcash_primitives = {git = "https://github.com/nuttycom/librustzcash", rev = "15eb5aab503190d3dae4cc62c76cbdc5e8699ab1"}
zcash_proofs = {git = "https://github.com/nuttycom/librustzcash", rev = "15eb5aab503190d3dae4cc62c76cbdc5e8699ab1"}
hdwallet = { git = "https://github.com/nuttycom/hdwallet", rev = "576683b9f2865f1118c309017ff36e01f84420c9" }

[features]
mainnet = ["zcash_client_sqlite/mainnet"]
testnet = []
